--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Caulculadora</h1>
+    <h1>Calculadora</h1>
     <div class="calculadora">
         <div>
             <div id="display">
